---
source: tests/db/postgres.rs
expression: connector.status_stats().await
---
Ok(
    StatusSats {
        completed: 3,
        processing: 3,
        cancelled: 1,
        queued: 5,
        failed: 2,
    },
)
